
This file documents all notable changes to https://github.com/devonfw/IDEasy[IDEasy].

== 2025.05.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/809[#809]: make uninstall with --force also remove from software repo
* https://github.com/devonfw/IDEasy/issues/1038[#1038]: XML merger fails in native-image on custom XPath with MissingResourceException

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/28?closed=1[milestone 2025.05.002].

== 2025.05.001

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/736[#736]: Resolved issue with handling of special characters in plugin names
* https://github.com/devonfw/IDEasy/issues/1271[#1271]: After installation of aws 'aws configure' not possible
* https://github.com/devonfw/IDEasy/issues/1264[#1264]: Fix ide.bat to detect errors properly
* https://github.com/devonfw/IDEasy/issues/1213[#1213]: Adapt log entry when tool version is not in compatible range
* https://github.com/devonfw/IDEasy/issues/1272[#1272]: Add name of file with missing namespace to warning message
* https://github.com/devonfw/IDEasy/issues/1190[#1190]: Add pycharm support to IDEasy
* https://github.com/devonfw/IDEasy/issues/1058[#1058]: ide create still cannot handle faulty JAVA_HOME

The full list of changes for this release can be found in https://github.com/devonfw/IDEasy/milestone/27?closed=1[milestone 2025.05.001].

== 2025.04.002

Release with new features and bugfixes:

* https://github.com/devonfw/IDEasy/issues/1037[#1037]: Add devonfw-ide legacy support for merging XML templates without namespace
* https://github.com/devonfw/IDEasy/issues/1217[#1217]: Remove plugin recommendation feature in VSCode
* https://github.com/devonfw/IDEasy/issues/1243[#1243]: Fix display of ide status although errors might occur
* https://github.com/devonfw/IDEasy/issues/1233[#1233]: Fix dropdown width in MSI installer for drive selection